<resources>
    <string name="app_name">Chatofy</string>
    <string name="action_logout">Logout</string>
    <string name="title_activity_start">StartActivity</string>
    <string name="title_activity_register">Sign Up</string>
    <string name="new_user">New User ?</string>
    <string name="welcome">Welcome !!!</string>
    <string name="create_account">Create Account</string>
    <string name="email">Email</string>
    <string name="display_name">Display Name</string>
    <string name="password">Password</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="Login">Login</string>
    <string name="action_account_settings">Account Settings</string>
    <string name="action_all_users">All Users</string>
    <string name="title_activity_settings">SettingsActivity</string>
    <string name="title_activity_edit">Edit</string>
    <string name="cancel">cancel</string>
    <string name="title_activity_users">All Users</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="received">received</string>
    <string name="sent">sent</string>
    <string name="accept">accept</string>
    <string name="accepted">accepted</string>
    <string name="own_profile">own_profile</string>
</resources>
